--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MacWallpaper Support</title>
+    <title>LiveWallpaper Support</title>
     <style>
         :root {
             --primary-color: #007AFF;
@@ -178,7 +178,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>MacWallpaper</h1>
+            <h1>LiveWallpaper</h1>
             <div class="subtitle">Bring your desktop to life</div>
         </header>
 
@@ -192,7 +192,7 @@
 
                 <div class="faq-item">
                     <div class="question">Does it drain my battery?</div>
-                    <div class="answer">MacWallpaper is designed to be energy efficient. It automatically pauses playback when you disconnect from power (if Low Power Mode is enabled) or when you have a fullscreen application open to save resources.</div>
+                    <div class="answer">LiveWallpaper is designed to be energy efficient. It automatically pauses playback when you disconnect from power (if Low Power Mode is enabled) or when you have a fullscreen application open to save resources.</div>
                 </div>
 
                 <div class="faq-item">
@@ -202,7 +202,7 @@
 
                 <div class="faq-item">
                     <div class="question">Can I use different wallpapers for different screens?</div>
-                    <div class="answer">Yes! MacWallpaper automatically detects all connected displays. You can set a global wallpaper or configure specific playlists for each screen.</div>
+                    <div class="answer">Yes! LiveWallpaper automatically detects all connected displays. You can set a global wallpaper or configure specific playlists for each screen.</div>
                 </div>
             </div>
         </div>
@@ -212,12 +212,12 @@
                 <h2>Contact Support</h2>
                 <p>Need more help? Found a bug? We're here to assist you.</p>
                 <p>For support inquiries, please email us at: <strong>berkearastam@gmail.com</strong></p>
-                <a href="mailto:berkearastam@gmail.com?subject=MacWallpaper%20Support%20Inquiry" class="contact-btn">Send Email</a>
+                <a href="mailto:berkearastam@gmail.com?subject=LiveWallpaper%20Support%20Inquiry" class="contact-btn">Send Email</a>
             </div>
         </div>
 
         <footer>
-            <p>&copy; 2025 MacWallpaper. All rights reserved.</p>
+            <p>&copy; 2025 LiveWallpaper. All rights reserved.</p>
             <p><a href="privacy.html">Privacy Policy</a></p>
         </footer>
     </div>
