--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MacWalpaper Privacy Policy</title>
+    <title>LiveWalpaper Privacy Policy</title>
     <style>
         :root {
             --primary-color: #007AFF;
@@ -123,12 +123,12 @@
     <div class="container">
         <header>
             <h1>Privacy Policy</h1>
-            <div class="subtitle">MacWalpaper</div>
+            <div class="subtitle">LiveWalpaper</div>
         </header>
 
         <div class="section">
             <h2>Overview</h2>
-            <p>Your privacy is important to us. MacWalpaper is designed to respect your privacy and data security. We do
+            <p>Your privacy is important to us. LiveWalpaper is designed to respect your privacy and data security. We do
                 not collect, store, or share any of your personal information.</p>
         </div>
 
@@ -145,7 +145,7 @@
 
         <div class="section">
             <h2>Local Storage</h2>
-            <p>MacWalpaper stores your preferences (such as volume settings, playlist configurations, and selected
+            <p>LiveWalpaper stores your preferences (such as volume settings, playlist configurations, and selected
                 videos) locally on your device using standard macOS storage mechanisms (UserDefaults and Application
                 Support directory).</p>
             <p>This data never leaves your device.</p>
@@ -161,7 +161,7 @@
         <a href="index.html" class="back-link">← Back to Support</a>
 
         <footer>
-            <p>&copy; 2025 MacWalpaper. All rights reserved.</p>
+            <p>&copy; 2025 LiveWalpaper. All rights reserved.</p>
         </footer>
     </div>
 </body>
